--- a/css/kthohr_settings.css
+++ b/css/kthohr_settings.css
@@ -23,7 +23,7 @@ h3:target
 }
 
 .navbar-custom .navbar-nav > li > a {
-    color:#fff;
+    color:#ddd;
 }
 
 .navbar-custom .navbar-nav > .active > a {
