--- a/css/kthohr_settings.css
+++ b/css/kthohr_settings.css
@@ -50,13 +50,13 @@ h3:target
     background-color:#262A31;
 }
 
-.navbar-custom .navbar-left {
+/* .navbar-custom .navbar-left {
     padding-left: 10px;
 }
 
 .navbar-custom .navbar-right {
     padding-right: 10px;
-}
+} */
 
 /* 2C2F36 */
 
