--- a/css/kthohr_settings.css
+++ b/css/kthohr_settings.css
@@ -58,19 +58,18 @@ html {
   }
   body {
     /* Margin bottom by footer height */
-    margin-bottom: 0px;
-    padding-bottom: 60px !important;
+    margin-bottom: 60px;
   }
   .footer {
-    position: relative;
-    bottom: 0px;
-    margin: 50px 0 0 0;
+    position: absolute;
+    bottom: 0;
     width: 100%;
     /* Set the fixed height of the footer here */
     height: 60px;
     background-color: #f5f5f5;
   }
-
+  
+  
   /* body > .container {
     padding: 60px 15px 0;
   } */
