--- a/css/kthohr_settings.css
+++ b/css/kthohr_settings.css
@@ -70,9 +70,9 @@ html {
   }
   
   
-  body > .container {
+  /* body > .container {
     padding: 60px 15px 0;
-  }
+  } */
 
   .container .text-muted {
     margin: 20px 0;
