--- a/css/kthohr_settings.css
+++ b/css/kthohr_settings.css
@@ -74,6 +74,19 @@ html {
     padding: 60px 15px 0;
   } */
 
+.container-fluid .text-muted {
+    margin: 20px 0;
+}
+
+.container-fluid .text-muted2 {
+    margin: 10px 0;
+}
+
+  .footer > .container-fluid {
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+
   .container .text-muted {
     margin: 20px 0;
   }
