--- a/css/kthohr_settings.css
+++ b/css/kthohr_settings.css
@@ -181,3 +181,30 @@ ga('send', 'pageview');
     -moz-border-radius: 6px 0 6px 6px;
     border-radius: 6px 0 6px 6px;
 }
+
+/* image opacity */  
+
+.img, .img2, .img3 {
+    opacity: 1;
+}
+
+.img2 {
+    opacity: 0.9;
+    filter: alpha(opacity=90); /* For IE8 and earlier */
+}
+
+.img2:hover {
+    opacity: 1.0;
+    filter: alpha(opacity=100); /* For IE8 and earlier */
+}
+
+.img3 {
+    opacity: 0.5;
+    filter: alpha(opacity=50); /* For IE8 and earlier */
+}
+
+.img3:hover {
+    opacity: 1.0;
+    filter: alpha(opacity=100); /* For IE8 and earlier */
+}
+
